--- a/versions.gradle
+++ b/versions.gradle
@@ -18,6 +18,7 @@ versions.android_gradle_plugin = "3.0.1"
 versions.rxjava2 = "2.1.3"
 versions.rx_android = "2.0.1"
 versions.rx_relay = "2.0.0"
+versions.rx_kotlin = "2.1.0"
 versions.kotlin = "1.1.60"
 versions.atsl_runner = "1.0.1"
 versions.atsl_rules = "1.0.1"
@@ -76,6 +77,7 @@ deps.junit = "junit:junit:$versions.junit"
 deps.rx_java2 = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
 deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 deps.rx_relay = "com.jakewharton.rxrelay2:rxrelay:$versions.rx_relay"
+deps.rx_kotlin = "io.reactivex.rxjava2:rxkotlin:$versions.rx_kotlin"
 deps.hamcrest = "org.hamcrest:hamcrest-all:$versions.hamcrest"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 ext.deps = deps
