--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.presentation.LoginActivity"></activity>
+        <activity android:name=".login.presentation.LoginActivity" />
+        <activity android:name=".login.presentation.LoginVMActivity" />
     </application>
 
 </manifest>
