Fix minor rendering problems in example

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.elmdroid">
 
     <application
-        android:name="com.example.elmdroid.ElmApp"
+        android:name=".ElmApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".login.presentation.LoginActivity" />
         <activity android:name=".login.presentation.LoginVMActivity" />
+        <activity android:name=".counter.CounterActivity"></activity>
     </application>
 
 </manifest>
