--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,6 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -39,5 +43,36 @@ dependencies {
     implementation deps.kotlin.stdlib
     implementation deps.support.app_compat
     implementation deps.constraint_layout
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    // unit testing
+    testImplementation deps.junit
+    testImplementation (deps.arch_core.testing, {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    })
+    testImplementation deps.mockito.core
+    testImplementation deps.hamcrest
+    testImplementation deps.kotlin.test
+    testImplementation deps.kotlin.stdlib
+
+    // ui testing
+//    androidTestImplementation deps.support.app_compat
+//    androidTestImplementation deps.support.recyclerview
+//    androidTestImplementation deps.support.cardview
+//    androidTestImplementation deps.support.design
+//
+//    androidTestImplementation(deps.espresso.core, {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+//    })
+//    androidTestImplementation(deps.espresso.contrib, {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+//    })
+//
+//    androidTestImplementation(deps.arch_core.testing, {
+//    })
+//    androidTestImplementation deps.dexmaker
+//    androidTestImplementation deps.mockito.core, { exclude group: 'net.bytebuddy' }
 }
