--- a/elmdroid/build.gradle
+++ b/elmdroid/build.gradle
@@ -2,13 +2,38 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'elmdroid'
+
+    publishedGroupId = 'cz.inventi.elmdroid'
+    libraryName = 'elmdroid'
+    artifact = 'elmdroid'
+
+    libraryDescription = 'The Elm Architecture for android'
+
+    siteUrl = 'https://github.com/InventiDevelopment/Elmdroid'
+    gitUrl = 'https://github.com/InventiDevelopment/Elmdroid.git'
+
+    libraryVersion = '0.3.1'
+
+    developerId = 'semanticer'
+    developerName = 'Tomas Valenta'
+    developerEmail = 'semanticer@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion build_versions.target_sdk
     defaultConfig {
         minSdkVersion build_versions.min_sdk
         targetSdkVersion build_versions.target_sdk
         versionCode 3
-        versionName "0.3"
+        versionName libraryVersion
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -33,3 +58,6 @@ dependencies {
     implementation deps.rx_relay
     implementation deps.rx_kotlin
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
