--- a/versions.gradle
+++ b/versions.gradle
@@ -15,6 +15,8 @@ versions.constraint_layout = "1.0.2"
 versions.glide = "3.8.0"
 versions.timber = "4.5.1"
 versions.android_gradle_plugin = "3.0.1"
+versions.bintray = "1.4"
+versions.maven_gradle_plugin = "1.4.1"
 versions.rxjava2 = "2.1.3"
 versions.rx_android = "2.0.1"
 versions.rx_relay = "2.0.0"
@@ -80,6 +82,9 @@ deps.rx_relay = "com.jakewharton.rxrelay2:rxrelay:$versions.rx_relay"
 deps.rx_kotlin = "io.reactivex.rxjava2:rxkotlin:$versions.rx_kotlin"
 deps.hamcrest = "org.hamcrest:hamcrest-all:$versions.hamcrest"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
+deps.bintray = "com.jfrog.bintray.gradle:gradle-bintray-plugin:$versions.bintray"
+deps.maven_gradle_plugin = "com.github.dcendents:android-maven-gradle-plugin:$versions.maven_gradle_plugin"
+
 ext.deps = deps
 
 def build_versions = [:]
