--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation project(':elmdroid')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation deps.timber
+    // arch
     implementation deps.lifecycle.viewmodel
     implementation deps.lifecycle.livedata
     implementation deps.lifecycle.java8
