--- a/elmdroid/build.gradle
+++ b/elmdroid/build.gradle
@@ -25,8 +25,10 @@ dependencies {
     implementation deps.kotlin.stdlib
 
     // arch
+    implementation deps.lifecycle.runtime
     implementation deps.lifecycle.viewmodel
     implementation deps.lifecycle.livedata
+    implementation deps.lifecycle.java8
 
     // rx
     implementation deps.rx_java2
