--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 
     // arch
     implementation deps.lifecycle.viewmodel
-    implementation deps.lifecycle.livedata
+    implementation deps.lifecycle.extensions
     implementation deps.lifecycle.java8
 
     // rx
