--- a/versions.gradle
+++ b/versions.gradle
@@ -18,7 +18,7 @@ versions.rxjava2 = "2.1.9"
 versions.rx_android = "2.0.2"
 versions.rx_relay = "2.0.0"
 versions.rx_kotlin = "2.2.0"
-versions.kotlin = "1.2.21"
+versions.kotlin = "1.2.30"
 versions.atsl_runner = "1.0.1"
 versions.atsl_rules = "1.0.1"
 versions.hamcrest = "1.3"
@@ -35,9 +35,10 @@ support.core_utils = "com.android.support:support-core-utils:$versions.support"
 deps.support = support
 
 def lifecycle = [:]
-lifecycle.runtime = "android.arch.lifecycle:runtime:$versions.arch"
 lifecycle.viewmodel = "android.arch.lifecycle:viewmodel:$versions.arch"
 lifecycle.livedata = "android.arch.lifecycle:livedata:$versions.arch"
+lifecycle.runtime = "android.arch.lifecycle:runtime:$versions.arch"
+lifecycle.extensions = "android.arch.lifecycle:extensions:$versions.arch"
 lifecycle.java8 = "android.arch.lifecycle:common-java8:$versions.arch"
 deps.lifecycle = lifecycle
 
