--- a/versions.gradle
+++ b/versions.gradle
@@ -13,7 +13,7 @@ versions.mockito_all = "1.10.19"
 versions.dexmaker = "2.2.0"
 versions.constraint_layout = "1.0.2"
 versions.glide = "3.8.0"
-versions.android_gradle_plugin = "3.1.0-rc02"
+versions.android_gradle_plugin = "3.1.0-rc03"
 versions.rxjava2 = "2.1.9"
 versions.rx_android = "2.0.2"
 versions.rx_relay = "2.0.0"
@@ -22,6 +22,7 @@ versions.kotlin = "1.2.30"
 versions.atsl_runner = "1.0.1"
 versions.atsl_rules = "1.0.1"
 versions.hamcrest = "1.3"
+versions.renderit = "0.2.1"
 def deps = [:]
 
 def support = [:]
@@ -79,6 +80,7 @@ deps.rx_relay = "com.jakewharton.rxrelay2:rxrelay:$versions.rx_relay"
 deps.rx_kotlin = "io.reactivex.rxjava2:rxkotlin:$versions.rx_kotlin"
 deps.hamcrest = "org.hamcrest:hamcrest-all:$versions.hamcrest"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
+deps.renderit = "com.github.semanticer:Renderit:$versions.renderit"
 ext.deps = deps
 
 def build_versions = [:]
@@ -92,5 +94,6 @@ def addRepos(RepositoryHandler handler) {
     handler.google()
     handler.jcenter()
     handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    handler.maven { url 'https://jitpack.io' }
 }
 ext.addRepos = this.&addRepos
