update gradle plugin

--- a/versions.gradle
+++ b/versions.gradle
@@ -13,7 +13,7 @@ versions.mockito_all = "1.10.19"
 versions.dexmaker = "2.2.0"
 versions.constraint_layout = "1.0.2"
 versions.glide = "3.8.0"
-versions.android_gradle_plugin = "3.1.0-rc03"
+versions.android_gradle_plugin = "3.1.0"
 versions.rxjava2 = "2.1.9"
 versions.rx_android = "2.0.2"
 versions.rx_relay = "2.0.0"
